# petme

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt  sql_app.db
authentication/: admin.py  models.py  renderers.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
authentication/migrations/: 0001_initial.py  0002_user_is_email_verified.py  0003_confirmationcodes.py  0004_auto_20211017_2003.py
authentication/templates/emails/: email_conf.html
common/: const.py  utils.py
common/management/commands/: createdefaultsuperuser.py
nginx/: default.conf
petme/: asgi.py  celery.py  urls.py  wsgi.py
petme/settings/: base.py  development.py
petme/staticfiles/: staticfiles.json
pets/: admin.py  models.py  pet_url_switcher.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_auto_20210723_0948.py
templates/: index.html
