[tool.poetry]
name = "petme"
version = "0.1.0"
description = ""
authors = ["irmi <im@irmio.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
jose = "^1.0.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
passlib = "^1.7.4"
pytest = "^7.1.2"
requests = "^2.28.1"
pre-commit = "^2.20.0"
databases = "^0.6.0"
asyncpg = "^0.26.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
